--- a/final_python_file.ipynb
+++ b/final_python_file.ipynb
@@ -48,7 +48,7 @@
    "id": "31342dfc",
    "metadata": {},
    "source": [
-    "# Weblink for data extraction"
+    "# Weblink for Data Extraction"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "id": "8f097e9d",
    "metadata": {},
    "source": [
-    "# Passing required ID and Password to chrome_browser"
+    "# Passing required ID and Password to Chrome browser"
    ]
   },
   {
@@ -122,7 +122,7 @@
    "id": "78b52a27",
    "metadata": {},
    "source": [
-    "# Moving to Job collections LInk"
+    "# Moving to Job collections page"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "id": "fd240a42",
    "metadata": {},
    "source": [
-    "# code for extracting useful data to store in lists\n"
+    "# Code for extracting data to store in lists\n"
    ]
   },
   {
