--- a/final_python_file.ipynb
+++ b/final_python_file.ipynb
@@ -350,7 +350,7 @@
    "id": "7c1a893d",
    "metadata": {},
    "source": [
-    "# length of all lists"
+    "# Showing length of all lists"
    ]
   },
   {
@@ -913,7 +913,7 @@
    "id": "0b62d3aa",
    "metadata": {},
    "source": [
-    "# save files in excel format"
+    "# Saving files in Excel format"
    ]
   },
   {
